  nur dann angezeigt, sofern der jeweilige Benutzer nicht bereits im Adressbuch
  enthalten ist.
- Für jede Benutzergruppe kann eine Homepage definiert werden, auf welche sich
  die dazugehörigen Benutzer nach erfolgreicher Authentifizierung laden
  sollen.
- Für jeden Benutzer kann eine primäre Benutzergruppe definiert werden.

Korrespondierende Mehrsprachigkeit
- Auch bei mehreren Sprachen haben alle Seiten die gleiche ID
- Editeren einer Seite in mehreren Sprachen auf einmal
- Vorschau-Funktion

Modul: Digital Asset Management
- Bei einem Download muss zwingend eine Datei oder URL als Quelle angegeben
  werden.
- Die Gültigkeit (Zeitdauer) eines Downloads kann definiert werden.
- Kategorien können in einer Gruppe zusammengefasst werden.
- Über die Benutzerverwaltung kann beim Erstellen eines neuen Benutzerkontos
  direkt eine neue persönliche Kategorie im Digital Asset Management Modul
  für diesen Benutzer erstellt werden.

Modul: Dokumenten System
- Uhrzeit- (nicht nur Datums-) gesteuerte Veröffentlichung von Dokumenten.

Modul: Shop
- Bilder können von einem Produkt wieder entfernt werden.

FCKEditor
- Neue Version 2.6.4.1

****************************************
* Behobene Fehler **********************
****************************************
Allgemein:
- Die im Benutzerprofil definierte bevorzugte Frontend-Sprache wird nach der
  Authentifizierung im Frontend nur dann geladen, sofern der Benutzer im
  Vorfeld nicht bereits die Frontend Sprache manuell ausgewählt hat.
- Geschwindigkeitsoptimierung der Benutzerverwaltung.
- Die Verwendung des Apache Moduls mod_rewrite wird nur aktiviert, sofern die
  Option 'Virtuelle Sprachverzeichnisse verwenden' aktiviert wurde.
- Erweiterte Berechtigungen beim News Manager und den Modulen Kalender,
  Inserate Mark und Verzeichnis.
- Das Versenden von E-Mails bei der Verwendung eines separaten SMTP-Servers
  funktioniert.
- Bei der Inhaltsnavigation wird beim Typ 'dropdown' ab der zweiten Ebene